lib/bait/checker/tests/attr_values.in.bt
// TODO add test for attr with value that should have none once such an attr is added

@deprecated_after
fun bar(){}
